:encoding=UTF-8:maxLineLen=80:wrap=hard:folding=indent:noTabs=true:tabSize=4:
XML Plugin Change log

    Version 2.8.8 Requires jEdit 5.0, Java 1.6, XercesPlugin 2.9.1, ErrorList 1.9, SideKick 1.3, BeautyPlugin 0.7.0, CommonControls 1.5, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), and Templates 4.1.2 (Optional)

    Version 2.8.7 Requires jEdit 5.0, Java 1.6, XercesPlugin 2.9.1, ErrorList 1.9, SideKick 1.3, BeautyPlugin 0.7.0, CommonControls 1.5, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), and Templates 4.1.2 (Optional)
        Fix #3614106: XML plugin: Missing Hyperlinks to xref linkend= elements (Alan Ezust,
        Eric Le Lay)
        Fix pb #1763: XML Plugin unexpected asset type (Matthieu Casanova, Eric Le Lay)
        Fix pb #1775 XML javacc parser prints out lots of crap to stdout (Alan
        Ezust, Eric Le Lay)

    Version 2.8.5
        Fix #3533666: Attribute completion after self-closed tag (Alan Ezust,
        Eric Le Lay)
        Fix #3566344: XML: some errors go to stdout instead of errorlist when using
        xml:root and a reference from root to current buffer is missing (Eric
        Le Lay)
        Fix completion in tld and maven files. Add maven schema built-in (Eric
        Le Lay).
        If there is one XSD schema binding in the file, it is accessible via xml-open-schema
        action. For multiple XSD schema bindings (like one schema per namespace), which
        is perfectly legal, only the first schema is opened. 

    Version 2.8.3-jedit-5.0 Requires jEdit 5.0, Java 1.6, XercesPlugin 2.9.1, ErrorList 1.9, SideKick 1.3, BeautyPlugin 0.7.0, CommonControls 1.5, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), and Templates 4.1.2 (Optional)
        Updated html completion to support HTML 5. (#3446700 - Dale Anson)
        Updated css completion to support same keywords as css mode for CSS 3.
        (Dale Anson)
        Fix "XML Plugin and Docbook 5 - no completion", bundle docbook5 schema
        (#3483934 - Eric Le Lay).