@@ -2,6 +2,8 @@
 XML Plugin Change log
 
     Version 2.8.8 Requires jEdit 5.0, Java 1.6, XercesPlugin 2.9.1, ErrorList 1.9, SideKick 1.3, BeautyPlugin 0.7.0, CommonControls 1.5, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), and Templates 4.1.2 (Optional)
+        plugin patch #147: Convert ascii entities (Character References) into 
+        chars in Entities to Characters action (Jarek Czekalski)
 
     Version 2.8.7 Requires jEdit 5.0, Java 1.6, XercesPlugin 2.9.1, ErrorList 1.9, SideKick 1.3, BeautyPlugin 0.7.0, CommonControls 1.5, EclipseIcons 1.0, Hyperlinks 1.1.0 (Optional), and Templates 4.1.2 (Optional)
         Fix #3614106: XML plugin: Missing Hyperlinks to xref linkend= elements (Alan Ezust,
